6859911: G1: assert(Heap_lock->owner() = NULL, "Should be owned on this thread's behalf")

The used() method assumes that the heap lock is held when it is called. However, when used() is called from print_on(), this is not the case.

Reviewed-by: ysr, jmasa